--- a/assets/CSS/register.css
+++ b/assets/CSS/register.css
@@ -19,6 +19,7 @@ h2{
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    gap: 30px;
 }
 .sign-up .form-group{
     width: 100%;
